--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -478,6 +478,18 @@
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
+@PartOfBook{glauber58,
+	author	= "GLAUBER, R. J.",
+	title	= "High-energy collision theory",
+	bookAuthor	= "Summer Institute of University of Colorado, Boulder",
+	bookTitle = "Lectures in Theoretical Physics, Vol.~1",
+	edition	= "1st",
+	publisher	= "Interscience Publishers",
+	address = "New York",
+	year	= "1958",
+	pages	= "315",
+}
+
 @Article{bethe58,
      author    = "BETHE, H. A.",
      title     = "Scattering and polarization of protons by nuclei",
