--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -18,7 +18,7 @@
 \Reftrue
 \Toctrue
 
-\iftrue
+\iffalse
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1.5cm
 \else
@@ -214,6 +214,7 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 \ListAbb{BLM}{Beam Loss Monitor}{A device to detect beam losses.}
 \ListAbb{BPM}{Beam Position Monitor}{A device to determine the position of the beam.}
 \ListAbb{CDF}{Cumulative Distribution Function}{}
+\ListAbb{CE}{Complete Eikonal}{An eikonal calculation carried out to all orders of the coupling constant.}
 \ListAbb{CERN}{Conseil Europ\' eenne pour la Recherche Nucl\' eaire}{European Organization for Nuclear Research in Geneva.}
 \ListAbb{CKL}{corrected \KL}{Refers to the Coulomb-interference formula \Eq{el phase CKL}.}
 \ListAbb{CM}{Center Of Mass}{Used to refer to the center-of-mass reference frame.}
