--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -3,13 +3,13 @@
 \eqn=0\tabn=0\fign=0
 
 
-The elastic scattering of protons is the simplest $\rm pp$ interaction possible, however, it still presents a challenge for theory to describe it. The complication may be seen in the fact that the coupling constant of quantum chromodynamics (\abb{QCD}) becomes large at low energy scales (low momentum transfer is characteristic for the elastic scattering of protons). Consequently, one can not apply the simple perturbation calculations like in quantum electrodynamics (\abb{QED}) for example. Instead of describing the elastic scattering from first principles, many model descriptions have been developed. These more or less \abb{QCD}-motivated models are often built on Regge theory and/or eikonal formalism grounds. We will discuss several of these models and present their cross-section predictions for the \abb{LHC} energies. We will show that the predictions differ considerably, up to several orders of magnitude for higher $|t|$ values (see \Fg{el mod dsdt large}). This wide spread reflects the limited capabilities of our present theoretical description of elastic scattering. It is clear, therefore, that more measurements are needed in order to guide the theoretical research in the right direction.
+The elastic scattering of protons is the simplest $\rm pp$ interaction possible, however, it still presents a challenge for theory to describe it. The complication may be seen in the fact that the coupling constant of quantum chromodynamics (\abb{QCD}) becomes large at low energy scales (low momentum transfer is characteristic for the elastic scattering of protons). Consequently, one can not apply the straight-forward perturbative calculations like in quantum electrodynamics (\abb{QED}) for example. Instead of describing the elastic scattering from first principles, many model descriptions have been developed. These more or less \abb{QCD}-motivated models are often built on Regge theory and/or eikonal formalism grounds. We will discuss several of these models and present their cross-section predictions for the \abb{LHC} energies. We will show that the predictions differ considerably, up to several orders of magnitude for higher $|t|$ values (see \Fg{el mod dsdt large}). This wide spread reflects the limited capabilities of our present theoretical description of elastic scattering. It is clear, therefore, that more measurements are needed in order to guide the theoretical research in the right direction.
 % dispersion relations
 
 Let us also remark that the elastic scattering -- a process, where the protons undergo just a glancing collision and stay intact -- is intimately connected with the proton's structure. Thus by studying the elastic scattering, one can learn about the structure of the proton.
 %(see for example the model of Islam et al.).
 
-The forward elastic scattering is connected with the total cross section by the optical theorem. It is thus not surprising to find quite large theoretical uncertainty in total-cross-section predictions for the \abb{LHC}. As we will show in \Fg{sigma tot}, the spread of predictions may be as large as from $85$ to $110\un{mb}$ for the energy of $14\un{TeV}$. This is partially due to a wide class of plausible energy dependences of the total cross section (ranging from $s^{\al}$ to $\log^2 s$, see e.g.~Sec.~7.1 in \bref{barone}) and partially due to large uncertainties of the cosmic-ray data and the conflicting Tevatron measurements. With these data, one can hardly favor any of the proposed theoretical descriptions over another. Again, it is evident that new and precise data are necessary -- for that purpose, the \abb{TOTEM} experiment has been built at the \abb{LHC} accelerator at \abb{CERN}.
+The forward elastic scattering is related to the total cross section by the optical theorem. It is thus not surprising to find quite large theoretical uncertainty in total-cross-section predictions for the \abb{LHC}. As we will show in \Fg{sigma tot}, the spread of the predictions may be as large as from $85$ to $110\un{mb}$ for the energy of $14\un{TeV}$. This is partially due to a wide class of plausible energy dependences of the total cross section (ranging from $s^{\al}$ to $\log^2 s$, see e.g.~Sec.~7.1 in \bref{barone}) and partially due to large uncertainties of the cosmic-ray data and the conflicting Tevatron measurements. With these data, one can hardly favor any of the proposed theoretical descriptions over another. Again, it is evident that new and precise data are necessary -- for that purpose, the \abb{TOTEM} experiment has been built at the \abb{LHC} accelerator at \abb{CERN}.
 % Froissart?
 
 CERN \bref{cern} (from French Conseil Europ\' een pour la Recherche Nucl\' eaire), is the world's largest center for particle-physics research, located on the French-Swiss border near Geneva. It hosts several interlinked particle accelerators, the largest of which is the Large Hadron Collider (\abb{LHC}) \bref{lhc}. There are six experiments at the \abb{LHC}: \abb{ALICE} (A Large Ion Collider Experiment), \abb{ATLAS} (A Toroidal \abb{LHC} Apparatus), \abb{CMS} (the Compact Muon Solenoid), \abb{LHCb} (the Large Hadron Collider beauty), \abb{LHCf} (the Large Hadron Collider forward) and \abb{TOTEM} (TOTal Elastic and diffractive cross section Measurement).
@@ -27,9 +27,9 @@ The \abb{TOTEM} experiment is dedicated to forward hadronic phenomena. It will m
 
 %%%%%%%%%%%%%%%%%%%%
 
-In this thesis, we will devote the first chapter to a theoretical discussion of proton-proton elastic scattering. For this process, only the strong and electromagnetic interactions are relevant. We will first focus on the former, traditionally called hadronic interaction. We will review some of the best known hadronic models (\Sc{el models}) and present their predictions for two \abb{LHC}-relevant energies $7$ and $14\un{TeV}$ (\Sc{el pred}). Then, in \Sc{el coulomb} we will discuss the interference between the electromagnetic and strong interaction. We will summarize the most common approaches and review the relations among them. We will present a new eikonal calculation to all orders of $\al$, the fine structure constant. We will conclude this section by making numerical comparisons between various interference formulae for the center-of-mass energy $7\un{TeV}$.
+In this thesis, we will devote the first chapter to a theoretical discussion of proton-proton elastic scattering. For this process, only the strong and electromagnetic interactions are relevant. We will first focus on the former, traditionally called hadronic interaction. We will review some of the best known hadronic models (\Sc{el models}) and present their predictions for two \abb{LHC}-relevant energies $7$ and $14\un{TeV}$ (\Sc{el pred}). Then, in \Sc{el coulomb} we will discuss the interference between the electromagnetic and strong interaction. We will summarize the most common approaches and review the relations among them. We will present a new eikonal calculation to all orders of $\al$, the fine structure constant. We will conclude this section by making numerical comparisons between several interference formulae for the center-of-mass energy $7\un{TeV}$.
 
-In the second chapter, we will show what requirements the programme of \abb{TOTEM} imposes on its detector apparatus. In \Sc{ttm det} we will describe the three sub-detectors: the telescopes T1, T2 and the system of movable Roman Pots. The forward (elastically or diffractively scattered) protons are detected by the Roman Pot detectors -- in \Sc{rp measurement} the principle of this measurement will be described. The last section of this chapter, \Sc{ttm tcs}, is devoted to the measurement of the total cross section and, in particular, to the extrapolation of the elastic amplitude to $t=0\un{GeV^2}$.
+In the second chapter, we will show what requirements the programme of \abb{TOTEM} imposes on its detector apparatus. In \Sc{ttm det} we will describe the three sub-detectors: the telescopes T1, T2 and the system of movable Roman Pots. The forward (elastically or diffractively scattered) protons are detected by the Roman Pot detectors -- the principle of this measurement will be described in \Sc{rp measurement}. The last section of this chapter, \Sc{ttm tcs}, is devoted to the measurement of the total cross section and, in particular, to the extrapolation of the elastic amplitude to $t=0\un{GeV^2}$.
 
 In the third chapter, we will describe the Roman Pot simulation and reconstruction software. The simulation part is used to obtain a detailed information on the processes that occur between an emission of a proton in an interaction and the detection of the proton by the Roman Pot detectors. This includes beam-smearing effects, interaction of the proton with the magnetic field of the \abb{LHC}, interaction of the proton in the Roman Pots, energy deposition in the silicon sensors and signal processing in the front-end chips. A good understanding of these effects is essential for developing and tuning the reconstruction modules. That means modules that deduce the scattered proton kinematics from the Roman Pot measurements.
 
@@ -37,7 +37,7 @@ The fourth chapter is dedicated to Roman Pot detector alignment -- that is a det
 %can be used for aligning the Roman Pots in the opposite arms.
 simplify the event selection. This method will be discussed in \Sc{al elast}.
 
-The fifth chapter describes the first elastic scattering measurement at the \abb{LHC}, made by \abb{TOTEM}. We will first present the analysis strategy and then give details on the background determination and subtraction (\Sc{felm bckg}) and the unfolding of the resolution effects (\Sc{felm unfold}). We will conclude by comparing the measurement to model predictions, see \Sc{felm cmp}.
+The fifth chapter describes the first elastic scattering measurement at the \abb{LHC}, made by \abb{TOTEM}. We will first present the analysis strategy and then give details on the background determination and subtraction (\Sc{felm bckg}) and the unfolding of the resolution effects (\Sc{felm unfold}). We will conclude by comparing the measurement to model predictions (\Sc{felm cmp}).
 
 %This thesis refers to the state of \abb{TOTEM} from the beginning of the year 2011. The results achieved since then have not been included.
 
