bold math in extraplation subsection titles
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5319 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/simu_reco.tex
+++ b/2010/thesis/simu_reco.tex
@@ -288,7 +288,7 @@ We will test these error estimates with \abb{MC} simulations in the following tw
 
 \def\OutlineLabel{High-beta* optics}
 \def\TOCLabel{High-$\be^*$ optics}
-\subsection[elr 1535]{High-$\BiggerFonts\mathbf\be^*$ optics}
+\subsection[elr 1535]{High-$\BiggerFonts\mathbf{\be^*}$ optics}
 
 In this section we will present the performance of the elastic reconstruction module for the case of the nominal $\be^* = 1535\un{m}$ optics (see \Sc{rp measurement}) at the center-of-mass energy $\sqrt s = 14\un{TeV}$. For that reason we have made a \abb{MC} simulation of elastic events with Elegent generator (see \Sc{elegent}) and run the entire reconstruction chain (see \Fg{sr sw structure}) up to the elastic reconstruction module. The elastic reconstruction has been performed with no cuts -- with formally infinite road-size and tolerance parameters. In this way, one may determine the optimal values of the cut parameters.
 
@@ -317,7 +317,7 @@ As a consequence of the low magnification values $v$ (of the order of $10^{-2}$)
 
 \def\OutlineLabel{Medium-beta* optics}
 \def\TOCLabel{Medium-$\be^*$ optics}
-\subsection[elr 90]{Medium-$\BiggerFonts\mathbf\be^*$ optics}
+\subsection[elr 90]{Medium-$\BiggerFonts\mathbf{\be^*}$ optics}
 
 In this section, we will show the elastic-reconstruction performance for the nominal $\be^* = 90\un{m}$ optics (see \Sc{rp measurement}) at $\sqrt s = 14\un{TeV}$. Like in the previous section, we have used no cuts, in order to find optimal values of the cut parameters.
 
