--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -252,7 +252,7 @@ The parameterization \Eq{ext M par} is related to the hadronic amplitude $\FH$. 
 
 \def\OutlineLabel{Extrapolation for beta* = 1535 m optics}
 \def\TOCLabel{Extrapolation for $\be^* = 1535$ m optics}
-\subsection{Extrapolation for $\be^* = 1535\un{m}$ optics}
+\subsection{Extrapolation for $\BiggerFonts\mathbf{\be^* = 1535\,m}$ optics}
 
 Since the Coulomb-interaction effects are relevant for this optics and since these effects act on the level of amplitude (not cross section, see \Sc{el coulomb}), we need to extend the parameterization \Eq{ext M par} to include also a phase component. \Fg{el mod phase} suggests that, for $|t| \ls 0.25\un{GeV^2}$, a polynomial parameterization is adequate again. Thus, the hadronic amplitude can be parameterized as:
 \eqref{\FH(t) = \e^{M(t)} \e^{\i P(t)}\ ,\qquad M(t), P(t) \hbox{ polynomials.}}{ext MP par}
@@ -275,7 +275,7 @@ We made a number of fits, trying to find such fit settings that minimize the dev
 
 \def\OutlineLabel{Extrapolation for beta* = 90 m optics}
 \def\TOCLabel{Extrapolation for $\be^* = 90$ m optics}
-\subsection{Extrapolation for $\be^* = 90\un{m}$ optics}
+\subsection{Extrapolation for $\BiggerFonts\mathbf{\be^* = 90\,m}$ optics}
 
 For the $\be^* = 90\un{m}$, the situation is quite different. The acceptance only starts at higher $|t|$ values, where the Coulomb effects can be neglected (see \Fg{ext C}). This means that it is not necessary to include a phase part of the hadronic amplitude $\FH$ as in \Eq{ext MP par} and one can use the parameterization \Eq{ext M par}. 
 
