Mario's comments implemented
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5379 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -12,7 +12,7 @@ Let us also remark that the elastic scattering -- a process, where the protons u
 The forward elastic scattering is related to the total cross section by the optical theorem. It is thus not surprising to find quite large theoretical uncertainty in total-cross-section predictions for the \abb{LHC}. As we will show in \Fg{sigma tot}, the spread of the predictions may be as large as from $85$ to $110\un{mb}$ for the energy of $14\un{TeV}$. This is partially due to a wide class of plausible energy dependences of the total cross section (ranging from $s^{\al}$ to $\log^2 s$, see e.g.~Sec.~7.1 in \bref{barone}) and partially due to large uncertainties of the cosmic-ray data and the conflicting Tevatron measurements. With these data, one can hardly favor any of the proposed theoretical descriptions over another. Again, it is evident that new and precise data are necessary -- for that purpose, the \abb{TOTEM} experiment has been built at the \abb{LHC} accelerator at \abb{CERN}.
 % Froissart?
 
-CERN \bref{cern} (from French Conseil Europ\' een pour la Recherche Nucl\' eaire), is the world's largest center for particle-physics research, located on the French-Swiss border near Geneva. It hosts several interlinked particle accelerators, the largest of which is the Large Hadron Collider (\abb{LHC}) \bref{lhc}. There are six experiments at the \abb{LHC}: \abb{ALICE} (A Large Ion Collider Experiment), \abb{ATLAS} (A Toroidal \abb{LHC} Apparatus), \abb{CMS} (the Compact Muon Solenoid), \abb{LHCb} (the Large Hadron Collider beauty), \abb{LHCf} (the Large Hadron Collider forward) and \abb{TOTEM} (TOTal Elastic and diffractive cross section Measurement).
+CERN \bref{cern} (from French Conseil Europ\' een pour la Recherche Nucl\' eaire), is the world's largest center for particle-physics research, located on the French-Swiss border near Geneva. It hosts several interlinked particle accelerators, the largest of which is the Large Hadron Collider (\abb{LHC}) \bref{lhc}. There are six experiments at the \abb{LHC}: \abb{ALICE} (A Large Ion Collider Experiment), \abb{ATLAS} (A Toroidal Lhc ApparatuS), \abb{CMS} (the Compact Muon Solenoid), \abb{LHCb} (the Large Hadron Collider beauty), \abb{LHCf} (the Large Hadron Collider forward) and \abb{TOTEM} (TOTal Elastic and diffractive cross section Measurement).
 
 
 % (in fact, \abb{TOTEM} has recently made its first measurement of the total cross section, as indicated in \Fg{sigma tot}).
@@ -27,13 +27,13 @@ The \abb{TOTEM} experiment is dedicated to forward hadronic phenomena. It will m
 
 %%%%%%%%%%%%%%%%%%%%
 
-In this thesis, we will devote the first chapter to a theoretical discussion of proton-proton elastic scattering. For this process, only the strong and electromagnetic interactions are relevant. We will first focus on the former, traditionally called hadronic interaction. We will review some of the best known hadronic models (\Sc{el models}) and present their predictions for two \abb{LHC}-relevant energies $7$ and $14\un{TeV}$ (\Sc{el pred}). Then, in \Sc{el coulomb} we will discuss the interference between the electromagnetic and strong interaction. We will summarize the most common approaches and review the relations among them. We will present a new eikonal calculation to all orders of $\al$, the fine structure constant. We will conclude this section by making numerical comparisons between several interference formulae for the center-of-mass energy $7\un{TeV}$.
+In this thesis, we will devote the first chapter to a theoretical discussion of proton-proton elastic scattering. For this process, only the strong and electromagnetic interactions are relevant. We will first focus on the former, traditionally called hadronic interaction. We will review some of the best known hadronic models (\Sc{el models}) and present their predictions for two \abb{LHC}-relevant energies, $7$ and $14\un{TeV}$ (\Sc{el pred}). Then, in \Sc{el coulomb} we will discuss the interference between the electromagnetic and strong interaction. We will summarize the most common approaches and review the relations among them. We will present a new eikonal calculation to all orders of $\al$, the fine structure constant. We will conclude this section by making numerical comparisons between several interference formulae for the center-of-mass energy $7\un{TeV}$.
 
 In the second chapter, we will show what requirements the programme of \abb{TOTEM} imposes on its detector apparatus. In \Sc{ttm det} we will describe the three sub-detectors: the telescopes T1, T2 and the system of movable Roman Pots. The forward (elastically or diffractively scattered) protons are detected by the Roman Pot detectors -- the principle of this measurement will be described in \Sc{rp measurement}. The last section of this chapter, \Sc{ttm tcs}, is devoted to the measurement of the total cross section and, in particular, to the extrapolation of the elastic amplitude to $t=0\un{GeV^2}$.
 
-In the third chapter, we will describe the Roman Pot simulation and reconstruction software. The simulation part is used to obtain a detailed information on the processes that occur between an emission of a proton in an interaction and the detection of the proton by the Roman Pot detectors. This includes beam-smearing effects, interaction of the proton with the magnetic field of the \abb{LHC}, interaction of the proton in the Roman Pots, energy deposition in the silicon sensors and signal processing in the front-end chips. A good understanding of these effects is essential for developing and tuning the reconstruction modules. That means modules that deduce the scattered proton kinematics from the Roman Pot measurements.
+In the third chapter, we will describe the Roman Pot simulation and reconstruction software. The simulation part is used to obtain detailed information on the processes that occur between an emission of a proton in an interaction and the detection of the proton by the Roman Pot detectors. This includes beam-smearing effects, interaction of the proton with the fields of the \abb{LHC} magnets, interaction of the proton in the Roman Pots, energy deposition in the silicon sensors and signal processing in the front-end chips. A good understanding of these effects is essential for developing and tuning the reconstruction modules, i.e.~software modules that deduce the scattered proton kinematics from the Roman Pot measurements.
 
-The fourth chapter is dedicated to Roman Pot detector alignment -- that is a determination of the positions of the Roman Pot sensors with respect to each other and with respect to the beam. This procedure has three steps: collimation alignment, track-based alignment and alignment with physics processes. During the collimation alignment, \Sc{al collim}, the Roman Pot motor control is calibrated with respect to the collimators of the \abb{LHC} and consequently with respect to the beam. The track-based alignment, \Sc{al tb}, analyses the track hits recorded by the Roman Pots. Their residuals (distances from the track fit) are used to extract sensor misalignments (deviations from their nominal positions). Thanks to the overlap between the vertical and horizontal Roman Pots, the track-based technique can establish the relative alignment of all sensors within each station. Then, physics processes can be used to align the sensors with respect to the beam. For that purpose one may exploit the symmetries of certain physics processes -- see \Sc{al prof}. A particularly good candidate is the elastic scattering. It possesses the azimuthal symmetry and moreover its two anti-collinear protons
+The fourth chapter is dedicated to Roman Pot detector alignment -- that is the determination of the positions of the Roman Pot sensors with respect to each other and with respect to the beam. This procedure has three steps: collimation alignment, track-based alignment and alignment with physics processes. During the collimation alignment, \Sc{al collim}, the Roman Pot motor control is calibrated with respect to the collimators of the \abb{LHC} and consequently with respect to the beam. The track-based alignment, \Sc{al tb}, analyses the track hits recorded by the Roman Pots. Their residuals (distances from the track fit) are used to extract sensor misalignments (deviations from their nominal positions). Thanks to the overlap between the vertical and horizontal Roman Pots, the track-based technique can establish the relative alignment of all sensors within each station. Then, physics processes can be used to align the sensors with respect to the beam. For that purpose one may exploit the symmetries of certain physics processes -- see \Sc{al prof}. A particularly good candidate is the elastic scattering. It is characterized by azimuthal symmetry, and moreover its two anti-collinear protons
 %can be used for aligning the Roman Pots in the opposite arms.
 simplify the event selection. This method will be discussed in \Sc{al elast}.
 
